# ironshelf

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  STATUS.md
.github/workflows/: app-release.yml  auto-merge.yml  deploy-cloud.yml  flutter.yml  mirror-web.yml  release.yml
app/: CHANGELOG.md  README.md  pubspec.yaml
app/android/: local.properties
app/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
app/lib/: main.dart  router.dart  theme.dart
app/lib/models/: author.dart  book.dart  library.dart  series.dart  server_config.dart
app/lib/providers/: auth_provider.dart  book_provider.dart  browse_provider.dart  cloud_provider.dart  collection_provider.dart  library_provider.dart  reading_provider.dart  search_provider.dart  server_provider.dart  settings_provider.dart
app/lib/screens/: annotations_screen.dart  author_detail_screen.dart  authors_screen.dart  book_detail_screen.dart  cloud_login_screen.dart  cloud_servers_screen.dart  collection_detail_screen.dart  collections_screen.dart  genre_detail_screen.dart  genres_screen.dart  home_screen.dart  library_screen.dart  login_screen.dart  notifications_screen.dart  reading_queue_screen.dart  register_screen.dart  search_screen.dart  series_detail_screen.dart  server_connect_screen.dart  server_login_screen.dart  settings_screen.dart  shell_screen.dart  stats_screen.dart
app/lib/screens/reader/: cbz_reader_screen.dart  epub_reader_screen.dart  pdf_reader_screen.dart  reader_screen.dart
app/lib/services/: api_service.dart  cloud_service.dart  review_service.dart  tts_reader.dart  update_service.dart  whats_new_service.dart
app/lib/widgets/: alpha_sidebar.dart  author_tile.dart  book_card.dart  book_cover.dart  book_social.dart  empty_state.dart  error_state.dart  genre_chip.dart  loading_skeleton.dart  progress_bar.dart  rating_stars.dart  search_bar.dart  series_tile.dart
app/test/: widget_test.dart
cloud/: package-lock.json  package.json  tsconfig.json  wrangler.toml
cloud/src/: auth.ts  email.ts  index.ts  schema.sql  types.ts
cloud/src/routes/: auth.ts  connect.ts  servers.ts  sharing.ts
deploy/: install.ps1  install.sh  ironshelf.plist  ironshelf.service  uninstall.ps1  uninstall.sh
docs/: API.md  ARCHITECTURE.md  AUTH-PROVIDERS-DESIGN.md  CALIBRE-INTEGRATION.md  DATA-MODEL.md  DEPLOYMENT.md  ROADMAP.md  START-HERE.md  openapi.yaml
server/: Cargo.toml  ironshelf.toml
server/crates/ironshelf-core/: Cargo.toml
server/crates/ironshelf-core/src/: email.rs  lib.rs  search_index.rs
server/crates/ironshelf-core/src/acquisition/: download_clients.rs  import.rs  indexers.rs  mod.rs  search.rs
server/crates/ironshelf-core/src/calibre/: mod.rs
server/crates/ironshelf-core/src/db/: mod.rs
server/crates/ironshelf-core/src/db/migrations/: 001_initial.sql  002_invites.sql  003_collections.sql  004_metadata_cache.sql  005_activity_log.sql  006_notifications.sql  007_kindle_email.sql  008_webdav_files.sql  009_ratings_reviews.sql  010_reading_queue.sql  011_reading_goals.sql  012_highlights.sql  013_webhooks.sql  014_library_access.sql  015_oidc_and_conversions.sql  016_acquisition.sql  017_cloud_config.sql  018_author_images.sql  019_author_info.sql  020_pinned_libraries.sql  021_auth_providers.sql  022_two_factor.sql  023_drop_acquisition.sql
server/crates/ironshelf-core/src/metadata/: google_books.rs  mod.rs  open_library.rs
server/crates/ironshelf-core/src/model/: mod.rs
server/crates/ironshelf-core/src/scan/: mod.rs
server/crates/ironshelf-server/: Cargo.toml
server/crates/ironshelf-server/src/: access.rs  error.rs  main.rs  pagination.rs  scheduler.rs  state.rs  tasks.rs  thumbnail.rs  tunnel.rs  upnp.rs  web.rs  webhook_dispatcher.rs
server/crates/ironshelf-server/src/auth/: media_token.rs  mod.rs
server/crates/ironshelf-server/src/config/: mod.rs
server/crates/ironshelf-server/src/middleware/: mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
server/crates/ironshelf-server/src/routes/: acquisition.rs  admin_auth.rs  auth.rs  authors.rs  books.rs  calibre_writeback.rs  cloud_auth.rs  collections.rs  continue_reading.rs  conversions.rs  converters.rs  duplicates.rs  files.rs  filesystem.rs  genres.rs  highlights.rs  import_export.rs  kindle.rs  kobo.rs  libraries.rs  library_access.rs  login_state.rs  metadata.rs  mod.rs  notifications.rs  oidc.rs  opds.rs  password.rs  personal_stats.rs  pinned_libraries.rs  progress.rs  ratings_reviews.rs  reading_goals.rs  reading_queue.rs  reading_status.rs  remote_access.rs  search.rs  series.rs  server_info.rs  sso.rs  (+6 more)
server/crates/ironshelf-server/tests/: api_test.rs
server/web/: index.html
server/web/css/: cbz-reader.css  pdf-reader.css  reader.css  style.css
server/web/js/: app.js  cbz-reader.js  pdf-reader.js  reader.js
