[workspace]
resolver = "2"
members = [
    "crates/ironshelf-core",
    "crates/ironshelf-server",
]

[workspace.package]
version = "0.48.1"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Ink & Iron Apps"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
urlencoding = "2"
trait-variant = "0.1"
tantivy = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
quick-xml = "0.36"
base64 = "0.22"
igd-next = { version = "0.15", features = ["aio_tokio"] }
