[package]
name = "ironshelf-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
trait-variant = { workspace = true }
tantivy = { workspace = true }
