[package]
name = "ironshelf-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ironshelf-server"
path = "src/main.rs"

[dependencies]
ironshelf-core = { path = "../ironshelf-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
