[package]
name = "ironshelf-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ironshelf-server"
path = "src/main.rs"

[dependencies]
ironshelf-core = { path = "../ironshelf-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
image = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
igd-next = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
rusqlite = "0.31"
tempfile = "3"
